Fix overflow issue for code blocks

--- a/src/global.css
+++ b/src/global.css
@@ -69,6 +69,8 @@ pre {
 	color: var(--cFgInverted);
 
 	font-size: var(--fontSizeLarge);
+
+	overflow-x: auto;
 }
 
 code {
